--- a/src/renderer/src/assets/styles/App.css
+++ b/src/renderer/src/assets/styles/App.css
@@ -104,7 +104,7 @@ code {
   cursor: pointer;
   text-decoration: none;
   display: inline-block;
-  border: 1px solid transparent;
+  border: 1px solid;
   text-align: center;
   font-weight: 600;
   white-space: nowrap;
