添加了网页运行调试的运行配置

--- a/src/renderer/src/assets/styles/App.css
+++ b/src/renderer/src/assets/styles/App.css
@@ -128,7 +128,7 @@ code {
   bottom: 30px;
   margin: 0 auto;
   padding: 15px 0;
-  font-family: 'Menlo', 'Lucida Console', monospace;
+  font-family: 'Menlo', 'Microsoft YaHei UI', 'Lucida Console', monospace;
   display: inline-flex;
   overflow: hidden;
   align-items: center;
