--- a/src/renderer/src/components/app/styles/index.css
+++ b/src/renderer/src/components/app/styles/index.css
@@ -54,7 +54,7 @@ body {
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
-  background-image: url('../assets/wavy-lines.svg');
+  background-image: url('../assets/images/wavy-lines.svg');
   background-size: cover;
   line-height: 1.6;
   font-family:
