--- a/src/renderer/src/global/styles.global.less
+++ b/src/renderer/src/global/styles.global.less
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@bg-image: '/wavy-lines.svg';
 
 :root {
   --ev-c-white: #ffffff;
@@ -54,7 +54,7 @@ body {
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
-  background-image: url('../assets/images/wavy-lines.svg');
+  background-image: url(@bg-image);
   background-size: cover;
   line-height: 1.6;
   font-family:
